# gitiles

./: .bazelrc  .buckconfig  .classpath  .gitignore  .gitmodules  .project  .zuul.yaml  BUCK  BUILD  COPYING  MODULE.bazel  README  README.md  TEST.md  WORKSPACE  bucklets.defs  external_deps.lock.json  fake_pom_deploy.xml  groups  navbar.md  pom.xml  project.config  version.bzl
Documentation/: api-reference.md  config.md  developer-guide.md  markdown.md
blame-cache/: BUCK  BUILD  pom.xml
gitiles-dev/: BUCK  pom.xml
gitiles-servlet/: BUCK  BUILD  pom.xml
gitiles-servlet/src/main/java/com/google/gitiles/: ArchiveFormat.java  ArchiveServlet.java  AuthorRevFilter.java  BaseServlet.java  BlameServlet.java  BlobRenderer.java  BlobSoyData.java  CommentLinkInfo.java  CommitData.java  CommitDescription.java  CommitJsonData.java  CommitSoyData.java  ConfigUtil.java  DebugRenderer.java  DefaultAccess.java  DefaultMimeTypeFinder.java  DefaultRenderer.java  DescribeServlet.java  DiffServlet.java  FileJsonData.java  FormatType.java  GitilesAccess.java  GitilesConfig.java  GitilesFilter.java  GitilesServlet.java  GitilesView.java  GitwebRedirectFilter.java  HmacUrlSigner.java  HostIndexServlet.java  HtmlDiffFormatter.java  HtmlViewType.java  IdentRevFilter.java  Linkifier.java  LogServlet.java  LogSoyData.java  MimeTypeFinder.java  Paginator.java  PaginatorFilters.java  PathServlet.java  Paths.java  (+22 more)
gitiles-war/: BUCK  pom.xml
gitiles-war/src/main/webapp/WEB-INF/: web.xml
java/com/google/gitiles/: AbstractHttpFilter.java  ArchiveServlet.java  BUILD  BaseServlet.java  BlobSoyData.java  BranchRedirect.java  BranchRedirectFilter.java  CacheableMetaInfResources.java  CommitData.java  CommitJsonData.java  CommitSoyData.java  ConfigUtil.java  DateFormatter.java  DebugRenderer.java  DefaultAccess.java  DefaultErrorHandlingFilter.java  DefaultRenderer.java  DefaultUrls.java  DescribeServlet.java  DiffServlet.java  FileTypeMaps.java  FormatType.java  GitilesAccess.java  GitilesConfig.java  GitilesFilter.java  GitilesRequestFailureException.java  GitilesServlet.java  GitilesUrls.java  GitilesView.java  GitlinkJsonData.java  GitwebRedirectFilter.java  GrepServlet.java  HmacUrlSigner.java  HostIndexServlet.java  HtmlDiffFormatter.java  IdentRevFilter.java  Linkifier.java  LogServlet.java  LogSoyData.java  MetaInfResources.java  (+22 more)
java/com/google/gitiles/blame/: BlameServlet.java  RegionAdapter.java
java/com/google/gitiles/blame/cache/: BUILD  BlameCache.java  BlameCacheImpl.java  JGitBlameCache.java  Region.java
java/com/google/gitiles/dev/: BUILD  DevServer.java
java/com/google/gitiles/doc/: BlockNoteExtension.java  DocServlet.java  GitHubThematicBreakExtension.java  GitilesHtmlExtension.java  GitilesMarkdown.java  HtmlPreBlock.java  HtmlSafeScript.java  HtmlSanitizer.java  ImageLoader.java  LiveSnippetHandler.java  MarkdownConfig.java  MarkdownToHtml.java  MarkdownUtil.java  MermaidExtension.java  MultiColumnExtension.java  NamedAnchorExtension.java  Navbar.java  PlantumlFencedCodeBlock.java  PlantumlFencedCodeBlockParserExtension.java  Pre.java  Script.java  SharedUtility.java  SmartQuoted.java  SmartQuotedExtension.java  TocExtension.java  TocFormatter.java
java/com/google/gitiles/doc/html/: HtmlBuilder.java
javatests/com/google/gitiles/: ArchiveServletTest.java  BUILD  BranchRedirectFilterTest.java  BranchRedirectTest.java  CacheableMetaInfResourcesTest.java  ConfigUtilTest.java  DefaultErrorHandlingFilterTest.java  DiffServletTest.java  FakeHttpServletRequest.java  FakeHttpServletResponse.java  FileTypeMapsTest.java  GitilesViewTest.java  GitwebRedirectFilterTest.java  GrepServletTest.java  HostIndexServletTest.java  LinkifierTest.java  LogServletTest.java  MoreAssert.java  PathServletTest.java  RefServletTest.java  RevisionParserTest.java  ServletTest.java  TestGitilesAccess.java  TestGitilesServlet.java  TestGitilesUrls.java  TestViewFilter.java  TimeCacheTest.java  TreeSoyDataTest.java  ViewFilterTest.java  VisibilityCacheTest.java  VisibilityCheckerTest.java  gitiles.config
javatests/com/google/gitiles/blame/: BlameServletTest.java
javatests/com/google/gitiles/doc/: DocServletTest.java  LinkTest.java  LiveSnippetHandlerTest.java  PathResolverTest.java
javatests/resources/com/google/gitiles/: BUILD  stackOverflowContent.txt
kythe/: BUILD  Empty.java  run-kythe.sh  vnames.json
lib/: BUCK  BUILD
lib/codemirror/: BUCK  cm4.defs  gen_mode_map.py
lib/com/google/template/soy/2011-22-12/: soy-2011-22-12.pom
lib/flogger/: BUILD
lib/guice/: BUCK
lib/httpcomponents/: BUCK
lib/jetty/: BUCK  BUILD
lib/jgit/: BUCK
lib/junit/: BUCK  BUILD
lib/ow2/: BUCK  BUILD
lib/slf4j/: BUCK  BUILD
lib/soy/: BUCK  BUILD
lib/truth/: BUILD
resources/com/google/gitiles/: language-types.properties  mime-types.properties
resources/com/google/gitiles/static/: base.css  doc.css
resources/com/google/gitiles/static/prettify/: prettify.css
resources/com/google/gitiles/templates/: BlameDetail.soy  Common.soy  DiffDetail.soy  Doc.soy  Empty.soy  Error.soy  HostIndex.soy  LogDetail.soy  ObjectDetail.soy  PathDetail.soy  RefList.soy  RepositoryIndex.soy  RevisionDetail.soy
resourcestest/: BUILD
src/main/java/com/google/gitiles/: BUILD  BaseServlet.java  ConfigUtil.java  GitilesFilter.java  GitilesServlet.java  GitilesUrls.java  GitilesView.java  HostIndexServlet.java  LogServlet.java  RepositoryDescription.java  RepositoryIndexServlet.java  RevisionParser.java  RevisionServlet.java  TreeSoyData.java  ViewFilter.java  VisibilityCache.java
src/main/resources/com/google/gitiles/: BUILD
src/main/webapp/WEB-INF/: web.xml
src/test/java/com/google/gitiles/: BUILD  ConfigUtilTest.java  GitilesViewTest.java  RevisionParserTest.java  TestGitilesUrls.java  TreeSoyDataTest.java
tools/: BUILD  bazel.rc  bazlets.MODULE.bazel  bazlets.bzl  gitiles-dev.launch  java_deps.MODULE.bazel  pkg_war.bzl  proxied-apache.conf  proxied-gitiles.config  run_bazel_dev.sh  run_dev.sh  stamper.bzl  workspace_status.py
tools/eclipse/: BUILD  project.py  project.sh
tools/maven/: BUILD  mvn.sh
(+119 files in other folders)
